# Brick_Manager

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BOX_IMAGES_FEATURE.md  BOX_MAINTENANCE_REDESIGN.md  DOCKER_README.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  LABEL_PRINTED_FEATURE.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  SET_FILTERING_FEATURE.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO_DOCSTRING_FIX_SUMMARY.md  add_missing_docstrings.py  bandit-report-new.json  bandit-report.json  cache_service_context_test.py  check_docker_files.py  comprehensive_fix.py  comprehensive_todo_fix.py  converter.ps  coverage.xml  database_schema.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-entrypoint.sh.bak  docker_container_test.py  entrypoint.sh  final_todo_docstring_fix.py  final_todo_fix.py  fix_all_todos.py  fix_critical_flake8.py  (+20 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CICD_PIPELINE.md  TESTING_FIX.md  WORKFLOW_STATUS.md  dependabot.yml
.github/workflows/: docker-image.yml  pylint.yml  python-app.yml
.idx/: dev.nix
brick_manager/: .coverage  .pylintrc  app.py  config.py  coverage.xml  manage.py  models.md  models.py  run_tests.py  setup_api_key.py  test_models.py  verify_table_structure.py
brick_manager/routes/: __init__.py  admin_sync.py  box_maintenance.py  building_instructions.py  dashboard.py  import_rebrickable_data.py  label.py  main.py  manual_entry.py  missing_parts.py  part_location.py  part_lookup.py  rebrickable_sync.py  set_maintain.py  set_search.py  storage.py  token_management.py  upload.py
brick_manager/services/: __init__.py  brickognize_service.py  cache_service.py  label_service.py  part_lookup_service.py  rebrickable_service.py  rebrickable_sets_sync_service.py  rebrickable_sync_service.py  sqlite_service.py  token_service.py
brick_manager/static/: manifest.json
brick_manager/static/css/: styles.css
brick_manager/static/js/: box_maintenance.js  box_maintenance_new.js  set_maintenance.js
brick_manager/templates/: MB-1.drawio  MB-4.drawio  admin_sync.html  ai_detection.html  box_maintenance.html  box_maintenance_new.html  building_instructions.html  dashboard.html  details.html  favicon_links.html  import_data.html  index.html  index_landing.html  lookup_part.html  manual_entry.html  missing_parts.html  navbar.html  part_location.html  results.html  set_maintain.html  set_search.html  storage.html  token_management.html  update_set.html
brick_manager/tests/: __init__.py  conftest.py  test_app_comprehensive.py  test_brickognize_service.py  test_coverage_boosters.py  test_final_coverage.py  test_fixed_comprehensive.py  test_high_coverage.py  test_high_coverage_boost.py  test_integration.py  test_label.py  test_label_service.py  test_large_modules_coverage.py  test_load_categories.py  test_lookup_service.py  test_main_routes.py  test_maximum_coverage.py  test_model_comprehensive.py  test_models.py  test_part_lookup_service.py  test_rebrickable_service.py  test_route_comprehensive.py  test_routes.py  test_routes_comprehensive.py  test_service_comprehensive.py  test_service_coverage.py  test_services_comprehensive.py  test_simple.py  test_working_coverage.py
lego_scanner/: .pylintrc  app.py  config.py  lookup.py  manage.py  master_lookup.json  models.py
lego_scanner/lookup/: master_lookup.json
lego_scanner/routes/: box_maintenance.py  dashboard.py  import_rebrickable_data.py  label.py  load_categories.py  load_parts.py  main.py  manual_entry.py  missing_parts.py  part_location.py  part_lookup.py  set_maintain.py  set_search.py  storage.py  upload.py
lego_scanner/services/: brickognize_service.py  cache_service.py  label_service.py  lookup_service.py  part_lookup_service.py  rebrickable_service.py  sqlite_service.py
lego_scanner/static/css/: styles.css
lego_scanner/static/js/: box_maintenance.js
lego_scanner/templates/: MB-1.drawio  MB-4.drawio  box_maintenance.html  dashboard.html  details.html  import_data.html  index.html  load_categories.html  load_parts.html  lookup_part.html  manual_entry.html  missing_parts.html  navbar.html  part_location.html  results.html  set_maintain.html  set_search.html  storage.html  update_set.html
lego_scanner/tests/: test_label.py  test_label_service.py  test_load_categories.py  test_lookup_service.py
lego_scanner/uploads/: R.jfif
scripts/: README.md  custom_checks.py  install_hooks.sh  manual_precommit.sh  pre_commit_analysis.py  security_check.py
