[tool.poetry]
name = "brick_manager"
version = "0.0.1"
description = "Tool for managing my Brick Collection"
authors = ["Holger Kornhaas <Holger@Kornhaas.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
pillow = "^10.4.0"
reportlab = "^4.2.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-script = "^2.0.6"
apscheduler = "^3.10.4"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"
flask-testing = "^0.8.1"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
