[tool.poetry]
name = "brick_manager"
version = "0.0.1"
description = "Tool for managing my Brick Collection"
authors = ["Holger Kornhaas <Holger@Kornhaas.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
pillow = "^10.4.0"
reportlab = "^4.2.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-script = "^2.0.6"
apscheduler = "^3.10.4"
pandas = "^2.3.3"
cryptography = "^46.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"
flask-testing = "^0.8.1"
vulture = "^2.14"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["brick_manager"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/instance/*",
    "*/static/*",
    "*/templates/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
